--- a/src/main/resources/static/admin/plugins/blog/css/mian.css
+++ b/src/main/resources/static/admin/plugins/blog/css/mian.css
@@ -597,3 +597,12 @@ body{
 	text-align: right;
 }
 /*blog-list page end*/
+ .links-list {
+	margin: 3rem 0 0;
+	min-height: 400px;
+	padding: 0 8px;
+}
+.links-list .list a {
+	color: #428bca;
+	text-decoration: none;
+}
