增加统计计数

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -31,6 +31,7 @@
                                     <a href="#">
                                         <div class="overlay">
                                             <p>博客总数</p>
+                                            <th:block><p th:text="'（'+${articles}+'）'" style="margin-top: 5%"></p></th:block>
                                         </div>
                                     </a>
                                 </div>
@@ -39,6 +40,7 @@
                                     <a href="#">
                                         <div class="overlay">
                                             <p>总评论数</p>
+                                            <th:block><p th:text="'（'+${comments}+'）'" style="margin-top: 5%"></p></th:block>
                                         </div>
                                     </a>
                                 </div>
@@ -49,6 +51,7 @@
                                     <a href="#">
                                         <div class="overlay">
                                             <p>分类数量</p>
+                                            <th:block><p th:text="'（'+${categorys}+'）'" style="margin-top: 5%"></p></th:block>
                                         </div>
                                     </a>
                                 </div>
@@ -57,6 +60,7 @@
                                     <a href="#">
                                         <div class="overlay">
                                             <p>标签总数</p>
+                                            <th:block><p th:text="'（'+${tags}+'）'" style="margin-top: 5%"></p></th:block>
                                         </div>
                                     </a>
                                 </div>
@@ -65,6 +69,7 @@
                                     <a href="#">
                                         <div class="overlay">
                                             <p>链接总数</p>
+                                            <th:block><p th:text="'（'+${links}+'）'" style="margin-top: 5%"></p></th:block>
                                         </div>
                                     </a>
                                 </div>
