--- a/src/main/resources/templates/admin/blog/blogCom.html
+++ b/src/main/resources/templates/admin/blog/blogCom.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>个人博客</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/blog/css/layui.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/blog/css/mian.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/sweetalert/css/sweetalert.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/blog/css/layui.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/blog/css/mian.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/css/sweetalert.css}">
 </head>
 <!--div head区域-->
 <div class="header" th:fragment="common-header">
     <div class="header-wrap">
         <h1 class="logo pull-left">
             <a th:href="@{/admin/index}">
-                <img th:src="@{~/static/admin/plugins/blog/img/logo.png}" alt="" class="logo-img">
+                <img th:src="@{/admin/plugins/blog/img/logo.png}" alt="" class="logo-img">
                 <span style="color:#fff">哈哈</span>
             </a>
         </h1>
