--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -93,16 +93,16 @@
         </div><!-- /.modal -->
     </div>
 </div>
-<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap-table.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap-table-zh-CN.js}"></script>
-<script th:src="@{~/static/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/menu.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/util.js}"></script>
-<script th:src="@{~/static/admin/plugins/image-picker/jquery.masonry.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/image-picker/image-picker.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/category.js}"></script>
+<script th:src="@{/admin/plugins/jquery/js/jquery.min.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap-table.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap-table-zh-CN.js}"></script>
+<script th:src="@{/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
+<script th:src="@{/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
+<script th:src="@{/admin/plugins/js/menu.js}"></script>
+<script th:src="@{/admin/plugins/js/util.js}"></script>
+<script th:src="@{/admin/plugins/image-picker/jquery.masonry.min.js}"></script>
+<script th:src="@{/admin/plugins/image-picker/image-picker.min.js}"></script>
+<script th:src="@{/admin/plugins/js/category.js}"></script>
 </body>
 </html>
