--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -5,7 +5,7 @@
 <!--header头页面-->
 <header th:replace="admin/common::common-head"></header>
 <body>
-<link th:href="@{~/static/admin/plugins/editormd/css/editormd.css}" rel="stylesheet"/>
+<link th:href="@{/admin/plugins/editormd/css/editormd.css}" rel="stylesheet"/>
 <!--nav区域-->
 <div th:replace="admin/common::common-nav"></div>
 <!--menu菜单区域-->
@@ -135,13 +135,13 @@
     <!--foot脚区域-->
     <div th:replace="admin/common::common-foot"></div>
 </div>
-<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/editormd/editormd.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/menu.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/util.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/edit.js}"></script>
+<script th:src="@{/admin/plugins/jquery/js/jquery.min.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
+<script th:src="@{/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
+<script th:src="@{/admin/plugins/editormd/editormd.min.js}"></script>
+<script th:src="@{/admin/plugins/js/menu.js}"></script>
+<script th:src="@{/admin/plugins/js/util.js}"></script>
+<script th:src="@{/admin/plugins/js/edit.js}"></script>
 </body>
 </html>
