--- a/src/main/resources/templates/admin/comment.html
+++ b/src/main/resources/templates/admin/comment.html
@@ -29,14 +29,14 @@
     <!--foot脚区域-->
     <div th:replace="admin/common::common-foot"></div>
 </div>
-<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap-table.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap-table-zh-CN.js}"></script>
-<script th:src="@{~/static/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/menu.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/util.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/comment.js}"></script>
+<script th:src="@{/admin/plugins/jquery/js/jquery.min.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap-table.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap-table-zh-CN.js}"></script>
+<script th:src="@{/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
+<script th:src="@{/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
+<script th:src="@{/admin/plugins/js/menu.js}"></script>
+<script th:src="@{/admin/plugins/js/util.js}"></script>
+<script th:src="@{/admin/plugins/js/comment.js}"></script>
 </body>
 </html>
