--- a/src/main/resources/templates/admin/elements.html
+++ b/src/main/resources/templates/admin/elements.html
@@ -6,12 +6,12 @@
     <title>响应式Bootstrap后台管理系统界面模板SpAdmin_UI组件 - JS代码网</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- Styles -->
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/bootstrap/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/bootstrap/css/bootstrap-responsive.min.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/fontawesome/css/font-awesome.min.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/jQueryUI/css/jquery-ui-1.10.0.custom.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/gritter/css/jquery.gritter.css}">
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/bootstrap/css/bootstrap-responsive.min.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/fontawesome/css/font-awesome.min.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/jQueryUI/css/jquery-ui-1.10.0.custom.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/gritter/css/jquery.gritter.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/css/styles.css}">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
                         <div class="container-fluid">
                             <div class="row-fluid">
                                 <div class="span4">
-                                    <img class="profile" th:src="@{~/static/admin/assets/img/bruce.jpg}" alt="">
+                                    <img class="profile" th:src="@{/admin/assets/img/bruce.jpg}" alt="">
                                 </div>
                                 <div class="span8 details">
                                     <small>Welcome <a href="#">Roger</a>, busy?</small>
@@ -63,23 +63,23 @@
                 <ul class="dropdown-menu">
                     <li>
                         <a href="#">
-                            <p class="padding"><img class="pull-left picture" th:src="@{~/static/admin/assets/img/flat_icons/message.png}" width="30" alt="" /><small>Hey, I wondered if you could help me as I can't log on to my account. Thanks</small></p>
+                            <p class="padding"><img class="pull-left picture" th:src="@{/admin/assets/img/flat_icons/message.png}" width="30" alt="" /><small>Hey, I wondered if you could help me as I can't log on to my account. Thanks</small></p>
                             <p><small class="muted"><i class="icon-user"></i> Stan Smith<span class="pull-right"><i class="icon-time"></i> 2 hours ago</span></small></p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <p class="padding"><img class="pull-left picture" th:src="@{~/static/admin/assets/img/flat_icons/calendar.png}" width="30" alt="" /><small>New calendar event: 'Greg's Birthday Party' in <span class="text-warning">2 days</span> time at 6pm</small></p>
+                            <p class="padding"><img class="pull-left picture" th:src="@{/admin/assets/img/flat_icons/calendar.png}" width="30" alt="" /><small>New calendar event: 'Greg's Birthday Party' in <span class="text-warning">2 days</span> time at 6pm</small></p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <p class="padding"><img class="pull-left picture" th:src="@{~/static/admin/assets/img/flat_icons/charts.png}" width="30" alt="" /><small>Sales of 'Product X' from 2013 Q3 are up <span class="text-success">15%</span> while others are up <span class="text-warning">2%</span></small></p>
+                            <p class="padding"><img class="pull-left picture" th:src="@{/admin/assets/img/flat_icons/charts.png}" width="30" alt="" /><small>Sales of 'Product X' from 2013 Q3 are up <span class="text-success">15%</span> while others are up <span class="text-warning">2%</span></small></p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <p class="padding"><img class="pull-left picture" th:src="@{~/static/admin/assets/img/flat_icons/cone.png}" width="30" alt="" /><small><span class="text-error">An error has occurred.</span> The cron needs your attention</small></p>
+                            <p class="padding"><img class="pull-left picture" th:src="@{/admin/assets/img/flat_icons/cone.png}" width="30" alt="" /><small><span class="text-error">An error has occurred.</span> The cron needs your attention</small></p>
                         </a>
                     </li>
                 </ul>
@@ -96,10 +96,10 @@
 <!-- /.navbar -->
 <ul class="menu">
     <li>
-        <a href="index.html"><span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/dashboard.png}" alt="" />Dashboard</span></a>
+        <a href="index.html"><span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/dashboard.png}" alt="" />Dashboard</span></a>
     </li>
     <li class="active">
-        <span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/layered.png}" alt="" />Ui Features<i class="icon-angle-down"></i></span>
+        <span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/layered.png}" alt="" />Ui Features<i class="icon-angle-down"></i></span>
         <ul>
             <li><a href="elements.html">Elements</a></li>
             <li><a href="components.html">Components</a></li>
@@ -109,26 +109,26 @@
         </ul>
     </li>
     <li>
-        <span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/edit.png}" alt="" />Form Elements<i class="icon-angle-down"></i></span>
+        <span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/edit.png}" alt="" />Form Elements<i class="icon-angle-down"></i></span>
         <ul>
             <li><a href="form-components.html">Form Components</a></li>
             <li><a href="form-wizard.html">Form Wizard</a></li>
             <li><a href="form-editors.html">Form Editors</a></li>
         </ul>
     </li>
-    <li><a href="tables.html"><span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/ruler.png}" alt="" />Data Tables</span></a></li>
+    <li><a href="tables.html"><span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/ruler.png}" alt="" />Data Tables</span></a></li>
     <li>
-        <span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/map.png}" alt="" />Maps<i class="icon-angle-down"></i></span>
+        <span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/map.png}" alt="" />Maps<i class="icon-angle-down"></i></span>
         <ul>
             <li><a href="google-maps.html">Google Maps</a></li>
             <li><a href="vector-maps.html">Vector Maps</a></li>
         </ul>
     </li>
-    <li><a href="charts.html"><span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/charts.png}" alt="" />Charts</span></a></li>
-    <li><a href="calendar.html"><span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/calendar.png}" alt="" />Calendar</span></a></li>
-    <li><a href="gallery.html"><span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/gallery.png}" alt="" />Gallery</span></a></li>
+    <li><a href="charts.html"><span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/charts.png}" alt="" />Charts</span></a></li>
+    <li><a href="calendar.html"><span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/calendar.png}" alt="" />Calendar</span></a></li>
+    <li><a href="gallery.html"><span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/gallery.png}" alt="" />Gallery</span></a></li>
     <li>
-        <span><img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/projects.png}" alt="" />Misc<i class="icon-angle-down"></i></span>
+        <span><img class="img-icon" th:src="@{/admin/assets/img/flat_icons/projects.png}" alt="" />Misc<i class="icon-angle-down"></i></span>
         <ul>
             <li><a href="login.html">Login</a></li>
             <li><a href="search.html">Search Results</a></li>
@@ -156,7 +156,7 @@
                         <div class="well-content">
                             <div class="row-fluid">
                                 <div class="quick-button span4 pink">
-                                    <img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/message.png}" alt="" />
+                                    <img class="img-icon" th:src="@{/admin/assets/img/flat_icons/message.png}" alt="" />
                                     <a href="#">
                                         <div class="overlay">
                                             <p>Messages</p>
@@ -164,7 +164,7 @@
                                     </a>
                                 </div>
                                 <div class="quick-button span4 green">
-                                    <img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/person.png}" alt="" />
+                                    <img class="img-icon" th:src="@{/admin/assets/img/flat_icons/person.png}" alt="" />
                                     <a href="#">
                                         <div class="overlay">
                                             <p>Profile</p>
@@ -172,7 +172,7 @@
                                     </a>
                                 </div>
                                 <div class="quick-button span4 blue">
-                                    <img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/map.png}" alt="" />
+                                    <img class="img-icon" th:src="@{/admin/assets/img/flat_icons/map.png}" alt="" />
                                     <a href="#">
                                         <div class="overlay">
                                             <p>Map</p>
@@ -182,7 +182,7 @@
                             </div>
                             <div class="row-fluid">
                                 <div class="quick-button span4 red">
-                                    <img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/calendar.png}" alt="" />
+                                    <img class="img-icon" th:src="@{/admin/assets/img/flat_icons/calendar.png}" alt="" />
                                     <a href="#">
                                         <div class="overlay">
                                             <p>Calendar</p>
@@ -190,7 +190,7 @@
                                     </a>
                                 </div>
                                 <div class="quick-button span4 grey">
-                                    <img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/ruler.png}" alt="" />
+                                    <img class="img-icon" th:src="@{/admin/assets/img/flat_icons/ruler.png}" alt="" />
                                     <a href="#">
                                         <div class="overlay">
                                             <p>Tables</p>
@@ -198,7 +198,7 @@
                                     </a>
                                 </div>
                                 <div class="quick-button span4 black">
-                                    <img class="img-icon" th:src="@{~/static/admin/assets/img/flat_icons/edit.png}" alt="" />
+                                    <img class="img-icon" th:src="@{/admin/assets/img/flat_icons/edit.png}" alt="" />
                                     <a href="#">
                                         <div class="overlay">
                                             <p>Forms</p>
@@ -559,10 +559,10 @@
         </div>
     </div>
 </div>
-<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/gritter/js/jquery.gritter.min.js}"></script>
-<script th:src="@{~/static/admin/plugins/js/menu.js}"></script>
+<script th:src="@{/admin/plugins/jquery/js/jquery.min.js}"></script>
+<script th:src="@{/admin/plugins/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/admin/plugins/jQueryUI/js/jquery-ui-1.9.2.custom.min.js}"></script>
+<script th:src="@{/admin/plugins/gritter/js/jquery.gritter.min.js}"></script>
+<script th:src="@{/admin/plugins/js/menu.js}"></script>
 </body>
 </html>
