--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>YC blog</title>
     <!--登录页面样式-->
-    <link rel="stylesheet" th:href="@{~/static/admin/plugins/vector/style.css}">
+    <link rel="stylesheet" th:href="@{/admin/plugins/vector/style.css}">
 </head>
 <body>
 
@@ -28,9 +28,9 @@
         </div>
     </div>
 </div>
-<script th:src="@{~/static/admin/plugins/jquery/js/jquery.min.js}"></script>
+<script th:src="@{/admin/plugins/jquery/js/jquery.min.js}"></script>
 <!--登录页面背景图片制作js-->
-<script th:src="@{~/static/admin/plugins/vector/vector.js}"></script>
+<script th:src="@{/admin/plugins/vector/vector.js}"></script>
 <script type="text/javascript">
     $(function(){
         Victor("container", "output");   //登录背景函数
