--- a/src/main/resources/templates/admin/blog/blog-comment.html
+++ b/src/main/resources/templates/admin/blog/blog-comment.html
@@ -53,7 +53,7 @@
 <script th:src="@{/admin/plugins/sweetalert/js/sweetalert.min.js}"></script>
 <script>
     layui.config({
-        base: '/static/admin/plugins/blog/js/'
+        base: '/admin/plugins/blog/js/'
     }).use('blog');
 </script>
 </body>
