--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -61,26 +61,26 @@
                             <label for="categoryURI" class="control-label">分类图标:</label>
                             <select class='form-control select2 image-picker' id="categoryURI"
                                     name="categoryURI">
-                                <option data-img-src='/static/admin/plugins/img/00.png' value="/static/admin/plugins/img/00.png"> 默认图标</option>
-                                <option data-img-src='/static/admin/plugins/img/01.png' value='/static/admin/plugins/img/01.png'> 图标1</option>
-                                <option data-img-src='/static/admin/plugins/img/02.png' value='/static/admin/plugins/img/02.png'> 图标2</option>
-                                <option data-img-src='/static/admin/plugins/img/03.png' value='/static/admin/plugins/img/03.png'> 图标3</option>
-                                <option data-img-src='/static/admin/plugins/img/04.png' value='/static/admin/plugins/img/04.png'> 图标4</option>
-                                <option data-img-src='/static/admin/plugins/img/05.png' value='/static/admin/plugins/img/05.png'> 图标5</option>
-                                <option data-img-src='/static/admin/plugins/img/06.png' value='/static/admin/plugins/img/06.png'> 图标6</option>
-                                <option data-img-src='/static/admin/plugins/img/07.png' value='/static/admin/plugins/img/07.png'> 图标7</option>
-                                <option data-img-src='/static/admin/plugins/img/08.png' value='/static/admin/plugins/img/08.png'> 图标8</option>
-                                <option data-img-src='/static/admin/plugins/img/09.png' value='/static/admin/plugins/img/09.png'> 图标9</option>
-                                <option data-img-src='/static/admin/plugins/img/10.png' value='/static/admin/plugins/img/10.png'> 图标10</option>
-                                <option data-img-src='/static/admin/plugins/img/11.png' value='/static/admin/plugins/img/11.png'> 图标11</option>
-                                <option data-img-src='/static/admin/plugins/img/12.png' value='/static/admin/plugins/img/12.png'> 图标12</option>
-                                <option data-img-src='/static/admin/plugins/img/13.png' value='/static/admin/plugins/img/13.png'> 图标13</option>
-                                <option data-img-src='/static/admin/plugins/img/14.png' value='/static/admin/plugins/img/14.png'> 图标14</option>
-                                <option data-img-src='/static/admin/plugins/img/15.png' value='/static/admin/plugins/img/15.png'> 图标15</option>
-                                <option data-img-src='/static/admin/plugins/img/16.png' value='/static/admin/plugins/img/16.png'> 图标16</option>
-                                <option data-img-src='/static/admin/plugins/img/17.png' value='/static/admin/plugins/img/17.png'> 图标17</option>
-                                <option data-img-src='/static/admin/plugins/img/18.png' value='/static/admin/plugins/img/18.png'> 图标18</option>
-                                <option data-img-src='/static/admin/plugins/img/19.png' value='/static/admin/plugins/img/19.png'> 图标19</option>
+                                <option data-img-src='plugins/img/00.png' value="plugins/img/00.png"> 默认图标</option>
+                                <option data-img-src='plugins/img/01.png' value='plugins/img/01.png'> 图标1</option>
+                                <option data-img-src='plugins/img/02.png' value='plugins/img/02.png'> 图标2</option>
+                                <option data-img-src='plugins/img/03.png' value='plugins/img/03.png'> 图标3</option>
+                                <option data-img-src='plugins/img/04.png' value='plugins/img/04.png'> 图标4</option>
+                                <option data-img-src='plugins/img/05.png' value='plugins/img/05.png'> 图标5</option>
+                                <option data-img-src='plugins/img/06.png' value='plugins/img/06.png'> 图标6</option>
+                                <option data-img-src='plugins/img/07.png' value='plugins/img/07.png'> 图标7</option>
+                                <option data-img-src='plugins/img/08.png' value='plugins/img/08.png'> 图标8</option>
+                                <option data-img-src='plugins/img/09.png' value='plugins/img/09.png'> 图标9</option>
+                                <option data-img-src='plugins/img/10.png' value='plugins/img/10.png'> 图标10</option>
+                                <option data-img-src='plugins/img/11.png' value='plugins/img/11.png'> 图标11</option>
+                                <option data-img-src='plugins/img/12.png' value='plugins/img/12.png'> 图标12</option>
+                                <option data-img-src='plugins/img/13.png' value='plugins/img/13.png'> 图标13</option>
+                                <option data-img-src='plugins/img/14.png' value='plugins/img/14.png'> 图标14</option>
+                                <option data-img-src='plugins/img/15.png' value='plugins/img/15.png'> 图标15</option>
+                                <option data-img-src='plugins/img/16.png' value='plugins/img/16.png'> 图标16</option>
+                                <option data-img-src='plugins/img/17.png' value='plugins/img/17.png'> 图标17</option>
+                                <option data-img-src='plugins/img/18.png' value='plugins/img/18.png'> 图标18</option>
+                                <option data-img-src='plugins/img/19.png' value='plugins/img/19.png'> 图标19</option>
                             </select>
                         </div>
                     </form>
