--- a/src/main/resources/templates/admin/blog/index.html
+++ b/src/main/resources/templates/admin/blog/index.html
@@ -133,7 +133,7 @@
 <script th:src="@{/admin/plugins/jquery/js/jquery.min.js}"></script>
 <script>
     layui.config({
-        base: '/static/admin/plugins/blog/js/'
+        base: '/admin/plugins/blog/js/'
     }).use('blog');
 </script>
 </body>
